Added SQL in user repo, removed unwanted toStrings